# product-analytics

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.scripts.json  turbo.json
.claude/agents/: architect-reviewer.md  architect.md  builder.md  epic-refiner.md  pm.md  posthog-source-guide.md  story-refiner.md
.claude/skills/implement-epics/: SKILL.md
.github/workflows/: release-ts.yml
examples/fernly/: package.json  tsconfig.json
planning/: BRIEF.md  HISTORY.md  QUERY-ROW-CONTRACT.md  REFERENCE-BACKEND.md  ROADMAP.md  WAREHOUSE-SCHEMA-CONTRACT.md
planning/_templates/: EPIC.md  STORY.md
planning/audit/: capability-completeness.md
planning/epics/: E1-CORE-workspace-scaffold.md  E10-CORE-example-consumer.md  E11-CORE-adoption-audit.md  E12-FF-flag-substrate-remote-eval.md  E13-FF-local-eval.md  E14-SR-session-replay.md  E15-QRY-response-row-contract.md  E16-QRY-python-row-contract.md  E17-ADP-warehouse-substrate.md  E18-QRY-warehouse-query-primitives.md  E19-NODE-ingest-receiver-persistence.md  E2-CORE-provider-seam.md  E20-FF-fully-local-flags.md  E21-OBS-protocol-neutrality-gate.md  E3-CORE-taxonomy-allowlist.md  E4-ID-identity-persistence.md  E5-CAP-transport.md  E6-CAP-capture-enrichment.md  E7-NODE-server-capture.md  E8-QRY-query-client.md  E9-RCT-react-binding.md  PY1-NODE-python-scaffold.md  PY2-CORE-python-seam.md  PY3-CORE-taxonomy-allowlist.md  PY4-NODE-server-capture.md  PY5-QRY-query-client.md  PY6-RCT-framework-bindings.md  PY7-CORE-example-consumer.md  PY8-OBS-parity-audit.md
planning/research/: ARCHITECT-RELEASE1.md  README.md
python/: .gitignore  README.md  pyproject.toml
python/examples/quillstream/: README.md  pyproject.toml
python/examples/quillstream/src/quillstream/: __init__.py  config.py  harness.py  recording_adapter.py  taxonomy.py  typed_view.py
python/examples/quillstream/tests/: test_allowlist_loud_failure.py  test_bar_b_import_audit.py  test_flag_exercise.py  test_framework_binding.py  test_harness.py  test_query_exercise.py  test_server_capture.py  test_typed_view_static_safety.py  test_unkeyed_noop.py
python/scripts/: neutrality_scan.py
python/src/analytics_kit/: __init__.py  adapter.py  allowlist.py  client.py  config.py  factory.py  neutral_event.py  noop.py  ports.py  provider.py  query.py  taxonomy.py  version.py
python/src/analytics_kit/flags/: __init__.py  adapter.py  config.py  factory.py  noop.py  transport.py
python/src/analytics_kit/flags/local/: __init__.py  definition_poller.py  definition_types.py  errors.py  evaluator.py  hash.py  match_cohort.py  match_property.py  neutral_definition.py
python/src/analytics_kit/integrations/: __init__.py  asgi.py  context.py  django.py
python/src/analytics_kit/query/: __init__.py  client.py  config.py  db_execute.py  default_db_execute.py  factory.py  http_adapter.py  noop.py  warehouse_adapter.py  warehouse_schema.py  warehouse_sql.py
python/src/analytics_kit/receiver/: __init__.py  asgi_mount.py  config.py  django_mount.py  factory.py  mount.py  receiver.py
python/src/analytics_kit/server/: __init__.py  adapter.py  consumer.py  transport.py  wire_mapper.py
python/tests/: db_execute_fakes.py  query_contract_fixtures.py  test_allowlist.py  test_asgi_middleware.py  test_bar_proofs.py  test_config_factory_noop.py  test_context.py  test_db_execute.py  test_django_middleware.py  test_e2e_zero_egress.py  test_flag_adapter.py  test_flag_local_eval.py  test_flag_local_resolution.py  test_flag_parity.py  test_flag_port_substrate.py  test_flag_static_definitions.py  test_http_query_adapter.py  test_neutral_definition.py  test_neutrality_scan.py  test_provider.py  test_query_client.py  test_real_stack_capture_probe.py  test_real_stack_query_probe.py  test_receiver.py  test_receiver_from_config.py  test_receiver_mounts.py  test_scaffold.py  test_seam_substrate.py  test_self_host_selection.py  test_server_adapter.py  test_server_consumer.py  test_server_reliability.py  test_server_transport.py  test_server_wire.py  test_sync_seam.py  test_taxonomy.py  test_taxonomy_static.py  test_transport_http_status_handling.py  test_warehouse_query_adapter.py  test_warehouse_row_parity.py  (+1 more)
scripts/: neutrality-scan.test.ts  neutrality-scan.ts
ts/: LICENSE  README.md  eslint.config.js  pnpm-lock.yaml  tsconfig.base.json  tsup.config.base.ts  turbo.json  vitest.config.ts
ts/scripts/: neutrality-scan.test.ts  neutrality-scan.ts  version-consistency.test.ts
(+338 files in other folders)
