[project]
name = "analytics-kit"
version = "0.0.0"
description = "Vendor-neutral analytics abstraction library — Python implementation (scaffold)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_kit"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
