[project]
name = "analytics-kit"
version = "0.1.0"
description = "Vendor-neutral analytics abstraction library — Python implementation (scaffold)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "typing_extensions>=4.7",
]

[project.optional-dependencies]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100"]
all = [
    "django>=4.2",
    "fastapi>=0.100",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "django>=4.2",
    "starlette>=0.37",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_kit"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "pyproject.toml", "README.md"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = ["scripts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "artifact_scan: the CI-only neutrality wheel/sdist build-extract-scan (needs a build; deselected in the fast inner loop)",
]
addopts = "-m 'not artifact_scan'"
