[project]
name = "analytics-kit"
version = "0.1.0"
description = "Vendor-neutral analytics abstraction library — Python implementation (scaffold)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "typing_extensions>=4.7",
]

[project.optional-dependencies]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100"]
warehouse = ["psycopg[binary]>=3.1,<4"]
all = [
    "django>=4.2",
    "fastapi>=0.100",
    "psycopg[binary]>=3.1,<4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "django>=4.2",
    "starlette>=0.37",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_kit"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "pyproject.toml", "README.md"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = ["scripts"]

# The default warehouse driver is an OPTIONAL extra (`analytics-kit[warehouse]`), lazily
# imported, so it is absent from the base typecheck env. Treat its import as missing-ok so the
# lazy guard typechecks whether or not the extra is installed.
[[tool.mypy.overrides]]
module = ["psycopg", "psycopg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "artifact_scan: the CI-only neutrality wheel/sdist build-extract-scan (needs a build; deselected in the fast inner loop)",
    "needs_postgres: opt-in tier that requires a real Postgres (>=16) via DATABASE_URL (deselected in the fast inner loop; run with -m needs_postgres)",
]
addopts = "-m 'not artifact_scan and not needs_postgres'"
